# course_work_3.0

./: pyproject.toml
src/: utils.py
tests/: test_utils.py
